content/_generated-doc/3.0/config/quarkus-config-group-logging-file-config-rotation-config.adoc

:summaryTableId: quarkus-config-group-logging-file-config-rotation-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-file-config-rotation-config_configuration]]link:#quarkus-config-group-logging-file-config-rotation-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.max-file-size]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.max-file-size[quarkus.log.file.rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.max-backup-index]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.max-backup-index[quarkus.log.file.rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.file-suffix]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.file-suffix[quarkus.log.file.rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.rotate-on-boot]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.file.rotation.rotate-on-boot[quarkus.log.file.rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
You need to either set a `max-file-size` or configure a `file-suffix` for it to work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size[quarkus.log.handler.file."file-handlers".rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_FILE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10M`


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index[quarkus.log.handler.file."file-handlers".rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_MAX_BACKUP_INDEX+++`
endif::add-copy-button-to-env-var[]
--|int 
|`5`


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix[quarkus.log.handler.file."file-handlers".rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_FILE_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot]]`link:#quarkus-config-group-logging-file-config-rotation-config_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot[quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
You need to either set a `max-file-size` or configure a `file-suffix` for it to work.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_HANDLER_FILE__FILE_HANDLERS__ROTATION_ROTATE_ON_BOOT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
